# UNISchoolwork

./: flake.nix  pyproject.toml  shell.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
3week/Physics/Lab/: .~lock.PhysicsLab-1.ods#  README.md
4week/Programming/: forthingy.py
5week/Engineering/Serial/: Serial.ino
5week/Physics/: Lab 4 Solar cells.xlsx
5week/Programming/: lab.hs
6week/Physics/: .~lock.Integrity Declaration.odg#  RawSupernovaData.ods  linedata.csv  part5.py  weekly.py
6week/Programming/: chars.lua  test.lua  test.py
Assignment/ENGN1211DesignReport/: .~lock.Design Report.odt#  Design Report.odt
Assignment/ENGN1211ROVER/1motor/: 1motor.ino
Assignment/ENGN1211ROVER/2motor/: 2motor.ino
src/4week/: todo.txt
src/4week/Physics/: Integrity Declaration.odg
src/5week/Physics/: Lab 4 Solar cells.ods  Lab.ods  Lab.odt
src/5week/Programming/: New Database.odb
src/6week/Physics/: DataC.csv  DataD.csv  Integrity Declaration.odg  Untitled 1.odt  lab.py  output.txt
src/6week/Programming/: someone.lua  test.py
src/7week/maths/: Snakes and ladders.odt  bettersnakes.m  matlab.lua  matlabpart2.m  snakes.m
src/7week/physics/: atmospherematplotlib.py  atmospherevpython.py  decaymatplotlib.py  decayvpython.py  prereading.py  workshop.py
src/7week/physics/lab/: lab.py  (+8 more)
src/7week/programming/: destroyingstef.hs  extension.hs  lambda.hs  lambdamore.hs  rndm.py  rndmatplotlib.py
src/8week/physics/: physics.py
src/Dump/: emy.py
src/Templates/: physics.py
test/myproject/: pyproject.toml
typings/: uncertainties.pyi
(+3 files in other folders)
