[project]
name = "myproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
 "setuptools<71",
 "vpython>=7.6.5",
 "numpy>=2.4.4",
 "uncertainties>=3.2.3",
 "matplotlib>=3.10.8",
 "pandas>=3.0.2",
 "odfpy>=1.4.1",
]
[tool.uv.extra-build-dependencies]
"py-ubjson" = ["setuptools"]
"vpython" = ["setuptools"]
"odfpy" = ["setuptools"]
